doc/other/baoc
        ^


SyntaxError: Identifier 'fetchWithTimeout' has already been declared

    at wrapSafe (node:internal/modules/cjs/loader:1638:18)

    at Module._compile (node:internal/modules/cjs/loader:1680:20)

    at Object..js (node:internal/modules/cjs/loader:1839:10)

    at Module.load (node:internal/modules/cjs/loader:1441:32)

    at Function._load (node:internal/modules/cjs/loader:1263:12)

    at TracingChannel.traceSync (node:diagnostics_channel:328:14)

    at wrapModuleLoad (node:internal/modules/cjs/loader:237:24)

    at Function.executeUserEntryPoint [as runMain] (node:internal/modules/run_main:171:5)

    at node:internal/main/run_main_module:36:49


Node.js v22.22.0

 ELIFECYCLE  Command failed with exit code 1.

[Zeabur] Pod/service-6942766fc95d806d08bfe6d4-6f8b95d97b-bjw7g - BackOff: Back-off restarting failed container fengfan-1997-github-io in pod service-6942766fc95d806d08bfe6d4-6f8b95d97b-bjw7g_environment-6942763d4947dd57c4fd05bc(4ef3860c-5e80-432e-8aae-92d72d197df5)

[Zeabur] Pod/service-6942766fc95d806d08bfe6d4-6f8b95d97b-bjw7g - BackOff: Back-off restarting failed container fengfan-1997-github-io in pod service-6942766fc95d806d08bfe6d4-6f8b95d97b-bjw7g_environment-6942763d4947dd57c4fd05bc(4ef3860c-5e80-432e-8aae-92d72d197df5)

[Zeabur] Pod/service-6942766fc95d806d08bfe6d4-6f8b95d97b-bjw7g - BackOff: Back-off restarting failed container fengfan-1997-github-io in pod service-6942766fc95d806d08bfe6d4-6f8b95d97b-bjw7g_environment-6942763d4947dd57c4fd05bc(4ef3860c-5e80-432e-8aae-92d72d197df5)

[Zeabur] Pod/service-6942766fc95d806d08bfe6d4-6f8b95d97b-bjw7g - Pulling: Pulling image "registry-oci.zeabur.cloud/e-6942763d4947dd57c4fd05bc/s-6942766fc95d806d08bfe6d4:d-696f69a59b1e66e8ea3800ae"

[Zeabur] Pod/service-6942766fc95d806d08bfe6d4-6f8b95d97b-bjw7g - Pulled: Successfully pulled image "registry-oci.zeabur.cloud/e-6942763d4947dd57c4fd05bc/s-6942766fc95d806d08bfe6d4:d-696f69a59b1e66e8ea3800ae" in 200ms (200ms including waiting). Image size: 430268876 bytes.

[Zeabur] Pod/service-6942766fc95d806d08bfe6d4-6f8b95d97b-bjw7g - Created: Created container: fengfan-1997-github-io

[Zeabur] Pod/service-6942766fc95d806d08bfe6d4-6f8b95d97b-bjw7g - Started: Started container fengfan-1997-github-io


> backend@1.0.0 start /src

> node server.js


/src/server.js:47

const { fetchWithTimeout } = require('./lib/fetch-utils');

        ^


SyntaxError: Identifier 'fetchWithTimeout' has already been declared

    at wrapSafe (node:internal/modules/cjs/loader:1638:18)

    at Module._compile (node:internal/modules/cjs/loader:1680:20)

    at Object..js (node:internal/modules/cjs/loader:1839:10)

    at Module.load (node:internal/modules/cjs/loader:1441:32)

    at Function._load (node:internal/modules/cjs/loader:1263:12)

    at TracingChannel.traceSync (node:diagnostics_channel:328:14)

    at wrapModuleLoad (node:internal/modules/cjs/loader:237:24)

    at Function.executeUserEntryPoint [as runMain] (node:internal/modules/run_main:171:5)

    at node:internal/main/run_main_module:36:49


Node.js v22.22.0

 ELIFECYCLE  Command failed with exit code 1.

[Zeabur] Pod/service-6942766fc95d806d08bfe6d4-6f8b95d97b-bjw7g - BackOff: Back-off restarting failed container fengfan-1997-github-io in pod service-6942766fc95d806d08bfe6d4-6f8b95d97b-bjw7g_environment-6942763d4947dd57c4fd05bc(4ef3860c-5e80-432e-8aae-92d72d197df5)

[Zeabur] Pod/service-6942766fc95d806d08bfe6d4-6f8b95d97b-bjw7g - BackOff: Back-off restarting failed container fengfan-1997-github-io in pod service-6942766fc95d806d08bfe6d4-6f8b95d97b-bjw7g_environment-6942763d4947dd57c4fd05bc(4ef3860c-5e80-432e-8aae-92d72d197df5)

[Zeabur] Pod/service-6942766fc95d806d08bfe6d4-6f8b95d97b-bjw7g - BackOff: Back-off restarting failed container fengfan-1997-github-io in pod service-6942766fc95d806d08bfe6d4-6f8b95d97b-bjw7g_environment-6942763d4947dd57c4fd05bc(4ef3860c-5e80-432e-8aae-92d72d197df5)

[Zeabur] Pod/service-6942766fc95d806d08bfe6d4-6f8b95d97b-bjw7g - BackOff: Back-off restarting failed container fengfan-1997-github-io in pod service-6942766fc95d806d08bfe6d4-6f8b95d97b-bjw7g_environment-6942763d4947dd57c4fd05bc(4ef3860c-5e80-432e-8aae-92d72d197df5)

[Zeabur] Pod/service-6942766fc95d806d08bfe6d4-6f8b95d97b-bjw7g - BackOff: Back-off restarting failed container fengfan-1997-github-io in pod service-6942766fc95d806d08bfe6d4-6f8b95d97b-bjw7g_environment-6942763d4947dd57c4fd05bc(4ef3860c-5e80-432e-8aae-92d72d197df5)


lock open
fullscreen


Zeabur AI